--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -46,7 +46,7 @@
   left: 0;
   width: 100%;
   height: 3px;
-  background-color: #e80111;
+  background-color: #002C78;
   transform: scaleX(0);
   transform-origin: bottom right;
   transition: transform 0.3s ease;
@@ -65,7 +65,6 @@
 }
 .header-popUp-content {
   width: 350px !important;
-  height: 640px;
   padding: 0px !important;
   background-color: white !important;
   z-index: 999;
@@ -73,7 +72,7 @@
 }
 
 .my-profile-picture {
-  @apply h-20 w-20 -mt-20 bg-center bg-cover bg-no-repeat;
+  @apply h-20 w-20 bg-center bg-cover bg-no-repeat;
   border-radius: 50%;
   background-image: url("../../assets/images/temp-profile-picture.png");
 }
@@ -81,3 +80,4 @@
   @apply w-full flex items-center rounded-md h-10 p-[2px] cursor-pointer;
   border: 1px solid #d6d7d8;
 }
+
