--- a/src/screens/Login/styles.scss
+++ b/src/screens/Login/styles.scss
@@ -3,6 +3,6 @@
   background-image: url("../../assets/images/login-background.png");
 }
 .logo {
-  @apply bg-contain bg-no-repeat w-1/3 h-1/10;
-  background-image: url("../../assets/images/amarant-iute-logo.png");
+  @apply bg-contain bg-no-repeat bg-center w-1/3 h-2/10;
+  background-image: url("../../assets/images/project-logo.png");
 }
